# financial-investment-advisor

./: .env.tmpl  .gitignore  pyproject.toml  readme.md  sample_data.json
agents/: agent.py  fia_workflow.py
agents/advisor_agent/: agent.py  prompts.py
agents/analyst_agent/: agent.py  prompts.py
agents/client_agent/: agent.py  prompts.py
core/: __init__.py  adk_plugins.py  config_manager.py  constants.py  jpmc_agent.py  llm_factory.py  loggers.py  state.py
examples/: advisor_workflow_example.py  advisor_workflow_without_client.py  basic_agent_test.py  end_to_end_example.py  workflow_resolution_loop_example.py
knowledge_store/: __init__.py  parser.py  store.py
knowledge_store/data/behavioral_finance/: behavioral_bias_in_investing.md  fear_and_greed_in_markets.md  herd_behavior_in_investing.md  loss_aversion_bias.md  overconfidence_bias.md
knowledge_store/data/equities/: etf_basics.md  index_fund_investing.md
knowledge_store/data/fixed_income/: bond_duration_risk.md  bond_laddering_strategy.md  bond_yield_basics.md  corporate_bonds_explained.md  government_bonds_overview.md  treasury_inflation_protected_securities.md
knowledge_store/data/investment_strategies/: core_satellite_investing.md  dollar_cost_averaging.md  inflation_hedging_strategies.md
knowledge_store/data/market_basics/: inflation_and_investing.md  interest_rates_and_markets.md  power_of_compound_interest.md  real_vs_nominal_returns.md  stock_market_volatility.md
knowledge_store/data/personal_finance/: emergency_fund_importance.md
knowledge_store/data/portfolio_management/: asset_allocation_fundamentals.md  diversified_portfolio_construction.md  efficient_frontier_explained.md  modern_portfolio_theory.md  portfolio_diversification_strategy.md  portfolio_rebalancing_strategy.md  target_date_funds.md
knowledge_store/data/private_banking/: concentrated_stock_risk.md  (+9 more)
schemas/: __init__.py  advisor_recommendation.py  analyst_findings.py  client_profile.py  client_response.py  kb_chunk.py  search_result.py
scripts/: ingest_kb.py  search_kb.py
tools/: __init__.py  knowledge_search_tool.py  research_mode_tool.py  todo_tool.py  web_search_tool.py
(+11 files in other folders)
